--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ads</title>
     <link href="Assets/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/common.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/index.css" rel="stylesheet" type="text/css" />
