--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ads</title>
     <link href="Assets/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/common.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/index.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/search.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/form.css" rel="stylesheet" type="text/css" />
 	<link href="Assets/css/loading.css" rel="stylesheet" type="text/css" />
+	<link href="Assets/css/profile.css" rel="stylesheet" type="text/css" />
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -23,6 +23,8 @@
   <script src="Assets/js/controllers/search.js"></script>
   <script src="Assets/js/controllers/form.js"></script>
   <script src="Assets/js/controllers/template.js"></script>
+  <script src="Assets/js/controllers/profile.js"></script>
+  <script src="Assets/js/controllers/mwpview.js"></script>
   <script src="Assets/js/directives/common.js"></script>
   <script src="Assets/js/services/search.js"></script>
  </body>
