--- a/Assets/pages/header.html
+++ b/Assets/pages/header.html
@@ -11,5 +11,6 @@
 	    <span class="float-right" ng-click="openMenu()" style="font-size:2em;cursor:pointer">
 		  <i class="icon ion-grid"></i>
 		</span>
+	     <span class="float-right" style="margin-right:10px;cursor:pointer;" ng-click="openLoginBox()">Login</span>
 	  </div>
 	</div>
