--- a/Assets/pages/template.html
+++ b/Assets/pages/template.html
@@ -1,6 +1,7 @@
 <overlay></overlay>
 <action-bar></action-bar>
 <menu></menu>
+<login></login>
 <notification text="{{notiText}}"></notification>
 <div class="container" ng-class="{'container-deactive':containerDeactive}">
 	<div ui-view></div>
