Changes in menu and Form page

--- a/Assets/pages/form.html
+++ b/Assets/pages/form.html
@@ -1,25 +1,14 @@
+<header-bar></header-bar>
 <div class="form-body">
 <main class="landing-layout"  ng-class="{'landing-layout--open':layoutToggle}">
  
   <div class="landing--above">
   <div class="row form-container">
    
-   <div class="pagination-container">
-     <ul class="pagination-container-ul">
-	   <li class="active"></li>
-	   <li></li>
-	   <li></li>
-	 </ul>
-   </div>
-   
-  <!-- <div class="row" style="    position: relative;
-    height: 100%;
-    overflow-x: hidden;
-    z-index:10;">-->
-    <a ui-sref="template.home" class="back-btn"><i class="icon ion-log-in"></i> <span class="btn-text">Back</span></a>
-    <div class="col-l12 col-m12 col-s12 form-title">
+
+   <!-- <div class="col-l12 col-m12 col-s12 form-title">
 	   Fill Details
-	</div>
+	</div>-->
 	
 	
 	<div class="col-l12 col-m12 col-s12 part2">
@@ -94,7 +83,7 @@
 	   </div>
 	</div>
 
-	<!--</div>-->
+
 	
 
   </div>
