--- a/Assets/pages/form.html
+++ b/Assets/pages/form.html
@@ -12,8 +12,8 @@
 	
 	
 	<div class="col-l12 col-m12 col-s12 part2">
-	   <div class="row">
-	     <div class="col-l4 offset-l2 col-m4 offset-m2 col-s10 offset-s1 public-private">
+	   <div class="row" style="background:#fff;">
+	     <div class="col-l4 offset-l2 col-m5 offset-m1 col-s10 offset-s1 public-private">
 		   <span class="public">Public
 		       <div class="squaredTwo">
 	            <input type="radio" value="Public" id="squaredTwo" name="check" checked/>
@@ -23,62 +23,62 @@
 		   <span>
 		   
 		 </div>
-		 <div class="col-l4 col-m4 offset-m0 col-s10 offset-s1 public-private">
+		 <div class="col-l4 col-m5 offset-m0 col-s10 offset-s1 public-private">
 		   <span class="private">Private
 		       <div class="squaredTwo">
 	            <input type="radio" value="Private" id="squaredTwo1" name="check" />
 	            <label for="squaredTwo1"></label>
               </div>
-			  <i class="icon ion-android-lock" style="float:right;font-size:1.2em;margin: 3px;"></i>
+			  <i class="icon ion-android-lock" style="padding-left: 16px;padding-right: 16px;"></i>
 		   <span>
 		   
 		 </div>
-		 <div class="col-l4 offset-l2 col-m4 offset-m2 col-s10 offset-s1">
+		 <div class="col-l4 offset-l2 col-m5 offset-m1 col-s10 offset-s1">
 		   <label for="name">
 		    <input type="text" placeholder="Name">
 			<i class="icon ion-person"></i>
 		   </label>
 		 </div>
-		 <div class="col-l4 col-m4 offset-m0 col-s10 offset-s1" >
+		 <div class="col-l4 col-m5 offset-m0 col-s10 offset-s1" >
 		    <label for="heading">
 		    <input type="text" placeholder="Heading">
 			<i class="icon ion-android-textsms"></i>
 		   </label>
 		 </div>
-		 <div class="col-l8 offset-l2 col-m8 offset-m2 col-s10 offset-s1">
+		 <div class="col-l8 offset-l2 col-m10 offset-m1 col-s10 offset-s1">
 		    <label for="description">
 		       <textarea placeholder="Description"></textarea>
 			</label>
 		 </div>
-		  <div class="col-l4 offset-l2 col-m4 offset-m2 col-s10 offset-s1">
+		  <div class="col-l4 offset-l2 col-m5 offset-m1 col-s10 offset-s1">
 		   <label for="link">
 		    <input type="text" placeholder="Link to other website">
 			<i class="icon ion-link"></i>
 		   </label>
 		 </div>
-		 <div class="col-l4 col-m4 offset-m0 col-s10 offset-s1" >
+		 <div class="col-l4 col-m5 offset-m0 col-s10 offset-s1" >
 		    <label for="phone">
 		    <input type="text" placeholder="Phone">
 			<i class="icon ion-ios-telephone"></i>
 		   </label>
 		 </div>
-		 <div class="col-l4 offset-l2 col-m4 offset-m2 col-s10 offset-s1">
+		 <div class="col-l4 offset-l2 col-m5 offset-m1 col-s10 offset-s1">
 		   <label for="email">
 		    <input type="text" placeholder="Email">
 			<i class="icon ion-email"></i>
 		   </label>
 		 </div>
-		 <div class="col-l4 col-m4 offset-m0 col-s10 offset-s1" >
+		 <div class="col-l4 col-m5 offset-m0 col-s10 offset-s1" >
 		    <label for="website">
 		    <input type="text" placeholder="Website">
 			<i class="icon ion-android-globe"></i>
 		   </label>
 		 </div>
-		 <div class="col-l4 offset-l2 col-m4 offset-m2 col-s10 offset-s1 public-private" ng-click="togglePreview()">
-		   <span class="public">Preview<span>
+		 <div class="col-l4 offset-l2 col-m5 offset-m1 col-s10 offset-s1 public-private" ng-click="togglePreview()">
+		   <span class="public btn">Preview<span>
 		 </div>
-		 <div class="col-l4 col-m4 offset-m0 col-s10 offset-s1 public-private" ng-click="getNoti()">
-		   <span class="private">Create<span>
+		 <div class="col-l4 col-m5 offset-m0 col-s10 offset-s1 public-private" ng-click="getNoti()">
+		   <span class="private btn">Create<span>
 		 </div>
 	   </div>
 	</div>
