--- a/Assets/pages/form.html
+++ b/Assets/pages/form.html
@@ -91,7 +91,7 @@
   </section>
    <div class="landing--beneath" >
  
-	  <preview toggle="togglePreview()" data="dataFromServer"></preview>
+	  <preview toggle="togglePreview()" data="dataFromServer" ng-if="preview"></preview>
    </div>
    
    </main>  
