--- a/Assets/pages/menu.html
+++ b/Assets/pages/menu.html
@@ -5,11 +5,11 @@
 	</div>
 	<div class="col-l12 col-m12 col-s12 menu-body">
 	   <ul>
-	     <li class="active"><a href="#">Option 1</a></li>
-		 <li><a href="#">Option 2 bla bla</a></li>
-		 <li><a href="#">bla Option 3</a></li>
-		 <li><a href="#">Option 4 etc</a></li>
-		 <li><a href="#">Option 5</a></li>
+	     <li ui-sref="template.home">Home</li>
+		 <li ui-sref="template.search">Search</li>
+		 <li ui-sref="template.form">Create MWP</li>
+		 <li>Option bla bla</li>
+		 <li>Option bla bla</li>
 	   </ul>
 	</div>
 	<span class="close-menu" ng-click="closeMenu()">
