--- a/Assets/pages/preview.html
+++ b/Assets/pages/preview.html
@@ -15,48 +15,22 @@
 	  details p{
 	    margin:0;
 		padding:10px;
+		font-size:1.1em;
 	  }
 	  
 	</style>
+	<a  ng-click="toggleFun()" class="back-btn"><i class="icon ion-log-in"></i> <span class="btn-text">Back</span></a>
 	<div class="col-l12 col-m12 col-s12" style="padding:0 15px">
-	  <details id="details" ng-open="true">
-        <summary style="margin:0;">Basic</summary>
-		  <p>  
-		    Name : Joban
-		 </p>
-		 <p>  
-		    Heading : Some Heading
-		 </p>
-		 <p>  
-		    Description : Sed risus feugiat fusce eu sit conubia venenatis aliquet nisl cras eu adipiscing ac cras at sem cras per senectus eu parturient quam.
+	  <details id="details" ng-open="true" ng-repeat="tab in mwpTabs track by $index">
+        <summary>{{tab.tabname}}</summary>
+		  <p ng-repeat="(key,value) in tab track by $index" ng-if="key!='tabname' && key!='active'">  
+		    {{key}} : {{value}}
 		 </p>
       </details>
 	  
-	  <details id="details" ng-open="true">
-        <summary>Contact</summary>
-		<p>  
-		   Email : jjjjjpreet@gmail.com
-		</p>
-		<p>  
-		   Phone : 9176176607
-		</p>
-		<p>  
-		   Website : www.joban.com
-		 </p> 
-      </details>
+	 
 	  
-	   <details id="details" ng-open="true">
-        <summary>Address</summary>
-		<p>  
-		   Location : Address of that place
-		</p>
-		<p>  
-		   City : Patiala
-		</p>
-		<p>  
-		   Website : www.joban.com
-		 </p> 
-      </details>
+
 	</div>
 	<div class="col-l12 col-m12 col-s12">
 	  <direction-map addr="data.mapAddress"></direction-map>
